--- a/AplikasiPembayaranSpp2.0.0/AplikasiPembayaranSpp2.0.0.csproj
+++ b/AplikasiPembayaranSpp2.0.0/AplikasiPembayaranSpp2.0.0.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>AplikasiPembayaranSpp2._0._0</RootNamespace>
     <UseWindowsForms>true</UseWindowsForms>
